themes/dracobit-twentysixteen/style.css
/* ... */
@media (max-width: 768px) {
	#header-outer-container {
		margin-right: 0;
	}

	.navbar-header {
		float: none;
		padding: 0!important;
	}

	#header-logo {
		margin-top: 12px;
		margin-left: 25px;
		font-size: 35px;
	}

	.navbar-toggle {
		display: block;
		float: right;
		color: white;
		height: 64px;
		font-size: 30px;
		width: 60px;
		border: none;
		border-radius: 0;
		box-shadow: none;
		margin-top: 0;
		margin-bottom: 0;
		margin-right: 0;
	}

	.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
		background-color: #606060;
	}

	.navbar-collapse {
		background-color: #606060;
		border: #606060;
	}

	.navbar-collapse .nav > li > a:hover, .nav-collapse .nav > li > a:focus, .nav-collapse .dropdown-menu a:hover, .nav-collapse .dropdown-menu a:focus {
		background-color: #383838;
		color: white;
	}

	.navbar-collapse.collapse {
		display: none!important;
	}

	.navbar-nav {
		float: none!important;
		margin: 0;
		font-size: 18px;
		border-bottom: 1px solid white;
	}

	.navbar-nav>li {
		float: none;
		padding: 5px 0;
		margin-right: 0;
	}

	.navbar-nav>li>a {
		padding: 15px 22px;
	}

	.navbar-text {
		float: none;
		margin: 15px 0;
	}

	.navbar-collapse.collapse.in {
		display: block!important;
	}

	.collapsing {
		overflow: hidden!important;
	}

	#dracobit_login_form {
		float: left!important;
		padding-top: 10px;
		margin-left: 20px;
	}

	#dracobit_login_form input[id="dracobit_login_submit"] {
		margin-left: 0;
		padding: 5px;
	}

	.form-control {
		width: 300px;
		padding: 6px 6px;
	}

	#header-display-name,
	#header-logout-container {
		float: left!important;
	}

	#header-display-name {
		font-size: 18px;
		margin-left: 15px;
	  padding-top: 20px;
	  padding-bottom: 15px;
	}

	#header-logout-container {
		margin-left: 20px;
	}
}

/***************************************************/

#page-container {
	margin-top: 40px;
}

#profile-avatar-container img {
	width: 100%;
	height: auto;
	min-height: 100px;
	border-radius: 20%;
	border: 2px solid #ccc;
}

#profile-rank-display {
	width: 100%;
	height: auto;
	min-height: 100px;
	border-radius: 20%;
}

a.anchor {
  display: block;
  position: relative;
  top: -55px;
  visibility: hidden;
}

.fp-arrow-content {
  text-align: center;
}

.fp-arrow-content i {
	font-size: 30px;
}

.fp-arrow-content h4 {
	margin-bottom: 0;
}

.charizard-background img {
	margin-top: 50px;
	width: 100%;
	height: 565px;
}

/**************************************************/

/* removing bullet points from custom widget menus */
.menu {
	list-style: none;
	padding: 0;
}

/**************************************************/

.fp-quotes-container {
	height: 300px;
	margin-top: 150px;
}

.carousel-control.left, .carousel-control.right {
  background-image: none;
}

.carousel-caption {
  position: static;
}

.fp-quote-content {
	border: 2px solid grey;
	padding: 25px;
	color: black;
	background-color: white;
	text-align: left;
	text-shadow: none;
}

.carousel-indicators {
	bottom: 0;
}

.navi {
	display: -webkit-flex;
	-webkit-flex-direction: row;
	-webkit-justify-content: space-between;
}

/********************************************/

.dracobit-container {
	margin-top: 70px;
	margin-bottom: 25px;
}

.dracobit-container legend {
	font-size: 28px;
}

.dracobit-section {
	margin-bottom: 25px;
}

#tutorial-nav-menu {
	padding-top: 20px;
}

#tutorial-nav-menu legend {
	color: #333;
	font-size: 22px;
}

#tutorial-container {
	margin-bottom: 20px;
}

.tutorial-version {
	float: right;
}

.tutorial-container .tutorial-tagline {
	font-size: 18px;
	margin-bottom: 10px;
}

.tutorial-type {
	color: #bf3939;
	font-weight: 500;
	float: right;
}

.tutorial-likes-container {
	display: flex;
	justify-content: flex-end;
}

.tutorial-likes-container i {
	float: left;
  font-size: 18px;
  margin-right: 5px;
}

.tutorial-container:first-child {
	display: block;
}

.tutorial-container legend {
	color: #333;
	font-size: 22px
}

.tutorial-container h4 {
	font-weight: 500;
}

.tutorial-container code {
	color: #00aeff;
}

.tutorial-container p.key {
	margin-top: 10px;
	font-weight: 500;
}

#tutorial-sidebar {
	padding-top: 20px;
}

#tutorial-overview-container {
	border-radius: 4px;
}

#tutorial-overview-container a {
	color: #333;
}

#tutorial-overview-container ul {
	padding-left: 0px;
	list-style: none;
}

#tutorial-overview-container li {
	list-style: none;
}

#tutorial-overview-container i,
#tutorial-preparing-and-installing-ubuntu i,
#tutorial-installing-ubuntu i,
#tutorial-installing-guest-additions i,
#tutorial-getting-connected-via-ssh i,
#tutorial-welcome-to-shell i,
#tutorial-command-line-interface i,
#tutorial-listing-files-and-understanding-ls-output i,
#tutorial-file-and-directory-permissions-explained i,
#tutorial-finding-files-and-directories i {
	margin-left: 10px;
}

.dracobit-sidebar {
	margin-top: 60px;
	border-left: 1px solid #ddd;
	min-height: 500px;
}

.widget {
	border: 1px solid #ddd;
	border-radius: 0 !important;
	cursor: pointer;
}

.widget-title {
	margin: 0;
	color: #bf3939;
}

.widget-tutorial {
	list-style: none;
}

.archive-item {
	border-radius: 0 !important;
	box-shadow: -10px 10px 0px 0px rgba( 0,0,0,0.05 );
}

.archive-item-title {
	margin-bottom: 0px;
	font-size: 22px;
	color: #bf3939 !important;
}

.archive-item-date,
.single-date {
	font-weight: 500;
}

.single-container {
	margin-top: 60px;
	border-radius: 0;
	padding: 10px 15px;
	border: 1px solid #ddd;
	box-shadow: -10px 10px 0px 0px rgba( 0,0,0,0.05 );
}

.single-featured-image-container {
	border-bottom: 4px solid #294F82;
}

.single-featured-image {
	display: flex;
	justify-content: center;
}

.single-featured-image img {
	min-height: 325px;
	max-height: 400px;
	height: auto;
}

.single-title {
	font-size: 28px;
	color: #bf3939;
}

.post-comment {
	border: 1px solid #ccc;
}

.post-menu {
	border-bottom: 1px solid #ccc;
	border: none;
	margin: 0;
	height: 40px;
}

.post-menu > div {
	height: 100%;
}
/* ... */

